# rbts_flap_viz

./: .gitignore  README.md  setup_workspace.sh
dv_ros_accumulation/: CMakeLists.txt
dv_ros_accumulation/scripts/: hole_detector_gui.py
flap_roller_viz/: CMakeLists.txt  package.xml
flap_roller_viz/launch/: camera_view.rviz  config.rviz  replay.launch  visualize.launch
flap_roller_viz/launch/presets/: aggressive.yaml  balanced.yaml  conservative.yaml
flap_roller_viz/scripts/: encoder_publisher.py  roller_controller.py
rbts_dv_ros_accumulation/: CMakeLists.txt  package.xml
rbts_dv_ros_accumulation/cfg/: Accumulator.cfg  EdgeMap.cfg  HoleDetector.cfg
rbts_dv_ros_accumulation/msg/: HoleEvent.msg
rbts_dv_ros_accumulation/scripts/: hole_detector_gui.py  synthetic_marker_publisher.py  unified_gui.py
rbts_dv_ros_accumulation/src/: accumulator.cpp  edge_map.cpp  hole_detector.cpp  motion_compensator.cpp
roller_handheld/: CMakeLists.txt  package.xml
roller_handheld/config/: joint_names_roller_handheld.yaml
roller_handheld/meshes/: base_link.STL  link_elastomer.STL  link_roller.STL  link_support.STL
roller_handheld/urdf/: roller_handheld.csv  roller_handheld.urdf
wing_flap/: CMakeLists.txt  package.xml
wing_flap/meshes/: base_link.STL
wing_flap/urdf/: wing_flap.csv  wing_flap.urdf
wkpiece/meshes/: base_link.STL
wkpiece/urdf/: Assem1.csv  Assem1.urdf
